--- a/front/source/less/cherry.less
+++ b/front/source/less/cherry.less
@@ -52,3 +52,6 @@
 // Utility classes
 @import "bootstrap/utilities.less";
 @import "bootstrap/responsive-utilities.less";
+
+// index classes
+@import "index/index.less";
